- loading model from another path bug fixed. added 'models' string and DS.
- added $config['subhelper_prefix'] = 'my_';  to config.php file. 
- added sess_get_flash( $prefix = '', $suffix = '') func. parameters to session drivers.
- added base_url(), site_url() functions to url helper file.,
- added set  auto_base_url() , base_url and source_url functions to config class, updated source_url() function.
- changed css(filename.css), js(filename.js), img(filename.ext) functions as css(css/filename.css), js(js/filename.js), img(images/filename.ext);
- added extra ='' (attributes) param to form_hidden(); function..
- added content_view('', (object)$data); support ..
- added script(), script_app(), script_base() functions to head tag helper.
- ini_set('display_errors', ..); removed from bootstrap and config.php
- content helper renamed as view.php and all "content_" function prefix changed as "view_"
- some impromevents for profiler class, added php and php5 libraries colourful track support.
- added session helper driver extend support, added to all helpers extend support
- added i_request() function to base input helper.
- session function all_userdata changed as sess_alldata()
- changed view helper view_set_folder() 'app_view' switch case string as 'view_app'
- removed css() function array support from head tag helper
- loaded_helper() to common.php file, changed bootstrap.php and ob_set_headers func, added loaded helpers track support to profiler class.
- add config load and lang load track support for profiler class
//-----------------------------------------------------------------------------

@todo .. upload class security
@todo .. change  lang_item() as lang()

@next version todo .. datamapper class
@next version todo .. add set_callback('function', param1, param1..) instead of set_rules('|callback_function')
@next version todo .. pager class         
@next version todo .. firewall class (integer, string validate for requests, login attempts for captcha) 